<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SoundCloud Test App</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login with SoundCloud</string>
    <string name="avatar">Avatar</string>
    <string name="stream">Begin Stream</string>
    <string name="pause">Pause</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email Address</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="again">Again!</string>
    <string name="content">Content description</string>

</resources>
